Ant, JvmArgs: MaxPermSize is not in use with contemporary JVMs