@@ -9,10 +9,11 @@ import java.util.List;
 import java.util.Arrays;
 import java.util.ArrayList;
 
-public class JvmArgs extends DataType {
+public final class JvmArgs extends DataType {
   private final Set<String> myArgs = new HashSet<String>();
-  private final List<String> myDefaultArgs = Arrays.asList("-Xss1024k", "-Xmx512m", "-XX:MaxPermSize=92m", "-XX:+HeapDumpOnOutOfMemoryError");
-  private final List<String> myDefaultArgsPatterns = Arrays.asList("Xss", "Xmx", "MaxPermSize=", "HeapDumpOnOutOfMemoryError");
+  private final List<String> myDefaultArgs = Arrays.asList("-Xss1024k", "-Xmx512m", "-XX:+HeapDumpOnOutOfMemoryError");
+  private final List<String> myDefaultArgsPatterns = Arrays.asList("Xss", "Xmx", "HeapDumpOnOutOfMemoryError");
+
   public JvmArgs() {
   }
   public void addConfiguredArg(Arg arg) {
